Fix burger icon on small screen

--- a/css/main.scss
+++ b/css/main.scss
@@ -105,6 +105,10 @@ a {
   a.page-link:hover {
     color: #124266
   }
+
+  .navbar-header {
+    color: white;
+  }
 }
 
 /* categories */
